plugin-index: fix vertical alignment of elements
Turns each li into display: flex so that the image and link can be
aligned.

Closes #107

--- a/assets/css/plugin-index.css
+++ b/assets/css/plugin-index.css
@@ -12,13 +12,14 @@
 .plugin-index li {
   flex-grow: 0;
   width: 33%;
-  vertical-align: middle;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  display: flex;
+  padding-bottom: 0.5em;
+  align-items: center;
 }
 
 .plugin-index a {
-  vertical-align: middle;
-  padding-bottom: 1.2em;
+  padding-left: 0.3em;
 }
